# bookfly-app.github.io

./: .SRCINFO  .gitignore  .prettierrc.toml  200.html  404.html  :w  CNAME  LICENSE.md  Makefile  PKGBUILD  README.md  bun.lockb  inbox.html  login.html  new.html  package-lock.json  package.json  search.html  signup.html  svelte.config.js  vite.config.js
_app/: version.json
docs/: 200.html  community.html
docs/_app/: version.json
docs/profile/: edit.html
profile/: edit.html
scripts/: deploy
settings/: about.html  account.html  appearance.html
settings/account/: become-a-developer.html
src/: app.html  env.json  global.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: api.ts  authorapi.ts  bookapi.ts  postapi.ts  serializer.ts  storageapi.ts  themes.svelte.ts  userapi.ts  util.ts
src/backend/: auth.svelte.ts  backend.ts
src/components/: BackButton.svelte  Background.svelte  Badges.svelte  BookCover.svelte  BookListing.svelte  CharacterLimitMeter.svelte  ClickableImage.svelte  ContextMenu.svelte  ExternalLink.svelte  Footer.svelte  Format.svelte  Header.svelte  ImageCarousel.svelte  ImagePicker.svelte  Link.svelte  Loading.svelte  New.svelte  Notification.svelte  Page.svelte  Popup.svelte  Post.svelte  Profile.svelte  ProfilePage.svelte  RadioInput.svelte  Rating.svelte  ReadingListItem.svelte  Select.svelte  Sidebar.svelte  StarRating.svelte  UserListing.svelte
src/routes/: +error.svelte  +layout.svelte  +page.svelte
src/themes/: catppuccin-latte.json  catppuccin-mocha.json  void.json  (+3 more)
(+1256 files in other folders)
