[package]
name = "wallflower_land"
version = "0.1.0"
description = "A social media client for readers and writers."
authors = ["Violet Iapalucci"]
license = "All Rights Reserved"
repository = "https://github.com/wallflower-land/wallflower-land.github.io"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "wallflower_land_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.0", features = [] }
tauri-plugin-log = "2"
